--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,4 +1,34 @@
 // Ref: https://github.com/nuxt-community/vuetify-module#customvariables
 //
 // The variables you want to modify
-// $font-size-root: 20px;
+$primary   : #E31F26;
+$secondary : #213342;
+$bg        : #F9F9FA;
+
+$dark      : #212121;
+$light     : #7798B5;
+
+$positive  : #21BA45;
+$negative  : #C10015;
+$info      : #31CCEC;
+$warning   : #F2C037;
+
+// =============================================================================
+// Breakpoints
+// =============================================================================
+$break-xs : 320px;
+$break-s  : 760px;
+$break-m  : 1000px;
+$break-l  : 1400px;
+$break-xl : 1600px;
+
+// =============================================================================
+// Breakpoints
+// =============================================================================
+$layout-padding-left : 16px;
+$layout-padding-right : 16px;
+
+// =============================================================================
+// Sizes
+// =============================================================================
+$size-site-max-width  : 1280px; // max width main content
