added header and footer component

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -75,6 +75,9 @@ $body-font-family: 'Montserrat';
   }
 }
 
+// ---------------------------------------------------------------------------------------------------------------------
+// Button primary
+// ---------------------------------------------------------------------------------------------------------------------
 .v-application {
   .btn_primary {
     background: $primary!important;
@@ -89,4 +92,3 @@ $body-font-family: 'Montserrat';
     margin-bottom: 16px;
   }
 }
-
