--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,8 +1,7 @@
 // ---------------------------------------------------------------------------------------------------------------------
 // Fonts
 // ---------------------------------------------------------------------------------------------------------------------
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 $body-font-family: 'Montserrat';
 
 .v-application {
@@ -17,7 +16,7 @@ $body-font-family: 'Montserrat';
     font-size: 60px;
     font-weight: 600;
     line-height: 3.8rem;
-    margin-bottom: 16px;
+    // margin-bottom: 16px;
     color: $secondary;
   }
 
@@ -25,7 +24,7 @@ $body-font-family: 'Montserrat';
     font-size: 40px;
     font-weight: normal;
     line-height: 3rem;
-    margin-bottom: 16px;
+    // margin-bottom: 16px;
     color: $secondary;
   }
 
@@ -33,7 +32,7 @@ $body-font-family: 'Montserrat';
     font-size: 35px;
     font-weight: normal;
     line-height: 2rem;
-    margin-bottom: 16px;
+    // margin-bottom: 16px;
     color: $secondary;
   }
 
@@ -41,7 +40,7 @@ $body-font-family: 'Montserrat';
     font-size: 24px;
     font-weight: normal;
     line-height: 1.4rem;
-    margin-bottom: 16px;
+    //margin-bottom: 16px;
     color: $secondary;
   }
 
@@ -49,14 +48,14 @@ $body-font-family: 'Montserrat';
     font-size: 18px;
     font-weight: bold;
     line-height: 1.2rem;
-    margin-bottom: 16px;
+    //margin-bottom: 16px;
     color: $secondary;
   }
 
   a {
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 16px;
+    //margin-bottom: 16px;
     line-height: 1.4rem;
     text-decoration: none;
     color: $light;
@@ -70,7 +69,7 @@ $body-font-family: 'Montserrat';
     font-size: 18px;
     font-weight: normal;
     line-height: 1.5rem;
-    margin-bottom: 16px;
+    // margin-bottom: 16px;
     color: $secondary;
   }
 }
@@ -89,6 +88,6 @@ $body-font-family: 'Montserrat';
     letter-spacing: normal;
     height: 50px!important;
     padding: 0 20px!important;
-    margin-bottom: 16px;
+    // margin-bottom: 16px;
   }
 }
