Have been added block with messengers for sharing and progress circular

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -72,6 +72,14 @@ $body-font-family: 'Montserrat';
     // margin-bottom: 16px;
     color: $secondary;
   }
+
+  .red-txt{
+    color: $primary;
+  }
+  .hidden{
+    display: none;
+    overflow: hidden;
+  }
 }
 
 // ---------------------------------------------------------------------------------------------------------------------
