--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -60,6 +60,7 @@ $body-font-family: 'Montserrat';
     line-height: 1.4rem;
     text-decoration: none;
     color: $light;
+    transition: all 350ms ease;
   }
 
   a:hover {
