--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -3,7 +3,7 @@
 // The variables you want to modify
 $primary   : #E31F26;
 $secondary : #213342;
-$bg        : #F9F9FA;
+$bg        : #f3f3f3;
 
 $dark      : #212121;
 $light     : #7798B5;
