--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,14 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+$primary : #E31F26;
+$secondary : #213342;
+$bg : #F9F9FA;
+
+$dark : #212121;
+$light : #7798B5;
+
+$positive : #21BA45;
+$negative : #C10015;
+$info : #31CCEC;
+$warning : #F2C037;
