responsive parts of the page with mixins

--- a/assets/css/good-breakpoints.scss
+++ b/assets/css/good-breakpoints.scss
@@ -1,5 +1,7 @@
-$breakpoint_1920 : 1920;
-$breakpoint_1400 : 1400;
-$breakpoint_1264 : 1264;
-$breakpoint_960 : 960;
-$breakpoint_320 : 320;
+$bp_desktop : 1920;
+$bp_laptop : 1264;
+$bp_tablet : 960;
+$bp_phone : 320;
+
+$add-bp_1 : 445;
+$add-bp_2 : 400;
