--- a/assets/css/good-media.scss
+++ b/assets/css/good-media.scss
@@ -28,3 +28,10 @@
     #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
   }
 }
+@mixin responsive-value_important($property, $startSize, $minSize, $maxWidthContainer) {
+  $addSize: $startSize - $minSize;
+  #{$property}: $startSize + px;
+  @media (max-width: #{$maxWidthContainer + px}) {
+    #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320})) !important;
+  }
+}
