--- a/assets/css/good-media.scss
+++ b/assets/css/good-media.scss
@@ -35,3 +35,10 @@
     #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320})) !important;
   }
 }
+@mixin responsive-value_restrained($property, $startSize, $minSize, $minWidthContainer, $maxWidthContainer) {
+  $addSize: $startSize - $minSize;
+  #{$property}: $startSize + px;
+  @media (max-width: #{$maxWidthContainer + px}) {
+    #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - #{$minWidthContainer + px}) / #{$maxWidthContainer - $minWidthContainer}));
+  }
+}
