--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -60,6 +60,7 @@ $body-font-family: 'Montserrat';
     line-height: 1.4rem;
     text-decoration: none;
     color: $light;
+    transition: all 350ms ease;
   }
 
   a:hover {
@@ -91,4 +92,8 @@ $body-font-family: 'Montserrat';
     padding: 0 20px!important;
     margin-bottom: 16px;
   }
+}
+
+.v-main__wrap {
+  min-height: calc(100vh - 64px);
 }
