--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -19,7 +19,7 @@ $warning   : #F2C037;
 :root {
   --primary   : #E31F26;
   --secondary : #213342;
-  --bg        : #F9F9FA;
+  --bg        : #f3f3f3;
 
   --dark      : #212121;
   --light     : #7798B5;
