coments deleting, likes system and style

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -75,7 +75,7 @@ $body-font-family: 'Montserrat';
   }
 
   .red-txt{
-    color: $primary;
+    color: $primary !important;
   }
   .hidden{
     display: none;
