--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -77,6 +77,9 @@ $body-font-family: 'Montserrat';
   .red-txt{
     color: $primary !important;
   }
+  .green-txt{
+    color: $positive !important;
+  }
   .hidden{
     display: none;
     overflow: hidden;
