fixed rented feature and resolved some bugs

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -77,8 +77,8 @@ $body-font-family: 'Montserrat';
   .red-txt{
     color: $primary !important;
   }
-  .green-txt{
-    color: $positive !important;
+  .blue-txt{
+    color: $info !important;
   }
   .hidden{
     display: none;
