--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -116,6 +116,12 @@ $body-font-family: 'Montserrat';
   &--wrap{
     min-height: fit-content !important;
   }
+  .good-container{
+    padding: 0 !important;
+    margin: 0 auto !important;
+    max-width: 1280px !important;
+    height: 100% !important;
+  }
 }
 
 .v-main__wrap {
@@ -124,4 +130,14 @@ $body-font-family: 'Montserrat';
 
 .v-main__wrap {
   min-height: calc(100vh - 64px);
+  @media (min-width: 960px) {
+    .container {
+      max-width: 100% !important;
+    }
+  }
+  @media (min-width: 1264px) {
+    .container {
+      max-width: 100% !important;
+    }
+  }
 }
