--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -126,18 +126,19 @@ $body-font-family: 'Montserrat';
 
 .v-main__wrap {
   min-height: calc(100vh - 64px);
-}
-
-.v-main__wrap {
-  min-height: calc(100vh - 64px);
   @media (min-width: 960px) {
     .container {
-      max-width: 100% !important;
+      max-width: none !important;
     }
   }
   @media (min-width: 1264px) {
     .container {
-      max-width: 100% !important;
+      max-width: none !important;
+    }
+  }
+  @media (min-width: 1904px) {
+    .container {
+      max-width: none !important;
     }
   }
 }
